--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -1,1 +1,299 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Dungeon Master – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #950606;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0 20px;
+      border: 5px solid #e1bf78;
+      box-sizing: border-box;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      text-shadow: 0 0 3px #ff758f, 0 0 3px #ff758f;
+      margin-bottom: 20px;
+      font-size: 38px;
+    }
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #ffb3c1;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #ff8ea6;
+      margin-bottom: 40px;
+    }
+    .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
+    h2 {
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    .sub {
+      margin-left: 1.4rem;
+      font-style: italic;
+      color: #c7c7c7;
+      list-style: none;
+      padding-left: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>The Dungeon Master</h1>
+  <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+  <p class="quote">“Everything is about sex except sex. Sex is about power.” – Anonymous</p>
 
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/the_dungeon_master_female.jpg" alt="Female Dungeon Master">
+    </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/the_dungeon_master_male.jpg" alt="Male Dungeon Master">
+    </div>
+  </div>
+    <h2>➺ Power Dynamic Arc</h2>
+  <p><strong>Relationship Trajectory:</strong><br>
+  Dungeon Masters are fixed dominants. They don’t perform power, they are power. They require obedience not as a preference but as a precondition. Their ideal relationships are built on total control paired with willing submission. If that control is questioned, the dynamic collapses.</p>
+
+  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <ul>
+    <li>• Dungeon Master remains dominant → 📈 Sustained high performance</li>
+    <li class="sub">Relationship deepens through structure, ritual, and obedience</li>
+    <li>• Submissive tries to take control → 📉 Sudden drop</li>
+    <li class="sub">Dominant feels betrayed, dynamic becomes emotionally unsafe</li>
+    <li>• Dungeon Master softens into vulnerability → ⚠️ Stagnation</li>
+    <li class="sub">Partner may feel confused or uneasy, unsure how to respond</li>
+    <li>• Dungeon Master switches roles → 🚨 Crash</li>
+    <li class="sub">Identity crisis ensues. Erotic trust dissolves. Relationship fails</li>
+  </ul>
+
+  <p><strong>Ideal Dynamic:</strong><br>
+  The Dungeon Master thrives with a submissive who finds freedom in structure. The healthiest version of this relationship involves explicit agreements, devotional rituals, and deep psychological surrender, where the submissive doesn’t just obey but wants to obey.</p>
+
+  <h2>➺ Origins of Desire</h2>
+  <p>The Dungeon Master eroticizes power, precision, and the psychological intimacy that control creates. For them, dominance isn’t aggression, it’s discipline, ritual, and reverence.</p>
+
+  <ul>
+    <li>• <strong>Hereditary Theory:</strong> Their dominance may be inherited from generations of survival-oriented behaviors, where control meant security and leadership was essential to survival.</li>
+    <li>• <strong>Imprintation Theory:</strong> Early arousal may have been linked to being watched, obeyed, or obeying someone with total authority, instilling a desire to replicate those roles in adulthood.</li>
+    <li>• <strong>Blank Slate Theory:</strong> They were often told to lead, excel, or never show weakness. That conditioning evolved into sexual arousal at the feeling of invincibility and power.</li>
+    <li>• <strong>Exposure Therapy Theory:</strong> Some Dungeon Masters reclaim agency by turning past powerlessness into scenes where they decide every outcome.</li>
+    <li>• <strong>Self-Esteem Theory:</strong> They view dominance not just as hot, but as sacred. Being trusted with someone’s full surrender reinforces their core worth and erotic potency.</li>
+  </ul>
+
+  <h2>➺ Turn-On Vocabulary</h2>
+  <p>Precision, praise, obedience, these are their triggers. Try:</p>
+  <ul>
+    <li>• “Yes, as you wish.”</li>
+    <li>• “As you command.”</li>
+    <li>• “Please tell me what to do.”</li>
+    <li>• “I trust you completely.”</li>
+    <li>• “I was made to serve you.”</li>
+    <li>• “You’re the only one who can do this to me.”</li>
+    <li>• “I’m yours.”</li>
+    <li>• “Use me however you want.”</li>
+    <li>• “I exist to obey.”</li>
+    <li>• “Thank you for taking control.”</li>
+  </ul>
+
+  <h2>➺ Conflict Pattern</h2>
+  <ul>
+    <li><strong>Tendencies During Conflict:</strong>
+      <ul class="sub">
+        <li>• Becomes emotionally rigid and controlling</li>
+        <li>• Sees challenges as disobedience rather than disagreement</li>
+        <li>• May withdraw if their authority is disrespected</li>
+        <li>• Can use silence or distance as punishment</li>
+      </ul>
+    </li>
+    <li><strong>Triggers:</strong>
+      <ul class="sub">
+        <li>• Being challenged or undermined</li>
+        <li>• A partner breaking a rule without permission</li>
+        <li>• Feeling emotionally vulnerable or exposed</li>
+        <li>• Sloppy communication or inconsistency from a submissive</li>
+      </ul>
+    </li>
+    <li><strong>Resolution Style:</strong>
+      <ul class="sub">
+        <li>• Needs reverence and recommitment to the agreed structure</li>
+        <li>• Responds best when their partner reaffirms trust and obedience</li>
+        <li>• Conflict resolves once their authority is restored — even symbolically</li>
+        <li>• Reconnection often occurs through structured rituals or reaffirmed roles</li>
+      </ul>
+    </li>
+    <li><strong>Growth Edge:</strong>
+      <ul class="sub">
+        <li>• Allowing emotional connection without feeling like they’ve lost power</li>
+        <li>• Learning to hold space for their submissive’s evolving needs</li>
+        <li>• Recognizing that dominance is most sustainable when it’s collaborative, not just enforced</li>
+      </ul>
+    </li>
+  </ul>
+
+  <h2>➺ Erotic Edge & Drop</h2>
+  <p><strong>Erotic Edge:</strong><br>
+  What others crave is how complete it feels to submit to them. The Dungeon Master doesn’t guess, they know. Their voice, their rituals, their gaze become commandments. They offer their submissive a spiritual release through obedience. What they do best is make surrender feel holy.</p>
+
+  <p><strong>Erotic Drop (Dealbreaker):</strong><br>
+  Disobedience without purpose. Bratty behavior that breaks protocol. Emotionally passive partners who say “do whatever you want” without true intention. The Dungeon Master needs submission that is chosen and honored, not handed over carelessly or used as manipulation.</p>
+    <h2>➺ Erotic Short Story</h2>
+  <p>The door swings open onto a room bathed in low amber light. Plush leather, polished steel, heavy chains anchored to beams overhead. Subtle thrum from hidden speakers. Scented candles flicker, shadows dancing across rich red velvet drapes. You step in behind them, hearing the soft click of the lock.</p>
+
+  <p>Control hangs in the air. You breathe it in.</p>
+
+  <p>They stand at the center of the room, eyes wide with anticipation. You don’t guide them with words, just a commanding gaze. They shift, knees brushing against glossy hardwood. Their breath is shallow.</p>
+
+  <p>First ritual, you think. The ritual of surrender.</p>
+
+  <p>You approach. Leather gloves snap on your hands, purposeful, final. You close the space, hand sliding up their spine, sensing tension coil. Their heartbeat pulses under your touch.</p>
+
+  <p>“Stand at the cross,” you command softly, voice calm steel.</p>
+
+  <p>They step forward. You guide arms out, wrists to cuffs. Cold metal snaps shut. Perfect. Their body tightens.</p>
+
+  <p>You step back, surveying. Total presence. No hesitation. Control has set in.</p>
+
+  <p>“Take off your blindfold,” you instruct. They comply.</p>
+
+  <p>They see you now. The glow of control in your eyes. No question. No negotiation. Just what is.</p>
+
+  <p>You walk to the center console: floggers, paddles, ropes, wax dripping from above. You select a riding crop. Silence as you flick fingers along its length, tone set.</p>
+
+  <p>They shiver. Not from cold.</p>
+
+  <p>“Get fully naked. Slowly,” you say. They unbutton, shed clothes. Each item dropped with purpose. Vulnerability unveiled. You stand still, reading their body, their breath. Hunger.</p>
+
+  <p>You lean in. “Get on your knees.”</p>
+
+  <p>They kneel, spine straight, head bowed. They know this posture.</p>
+
+  <p>You trail the crop up their side, letting it graze skin. Just enough. Their breath hitches.</p>
+
+  <p>“You’re mine. Understand?”</p>
+
+  <p>They nod, voice unsteady. “Yes, I’m yours.”</p>
+
+  <p>You smile. They want approval. You give a nod.</p>
+
+  <p>You deliver a single, measured strike. Whack, barely a snap. Their back arches with the impact. Soft gasp.</p>
+
+  <p>“Good response.”</p>
+
+  <p>You pause, letting the reverberation settle.</p>
+
+  <p>Then you command: “Breathe deeply. Count to five.” They inhale. “One… Two…” Their focus sharpens.</p>
+
+  <p>You return. Another strike. Harder. Warmth blossoms, pleasure, pain, power exchange.</p>
+
+  <p>Each stroke is deliberate. A decree. A statement. With each, their breathing deepens, control slipping.</p>
+
+  <p>You watch their eyes, fogged, arousal lit. This is the moment dominance becomes devotion.</p>
+
+  <p>You cease. Silence restores. You approach, press your chest to their back, your breath hot in their ear. “Did you enjoy that?”</p>
+
+  <p>Their voice trembles. “Yes. Please… more.”</p>
+
+  <p>You grin. That single word, pleasure, obedience, want, echoes your success. Reinforces that they’re under your power.</p>
+
+  <p>You guide them to the bondage cross, arms high, legs draped. They’re exposed, submissive, willing.</p>
+
+  <p>You take a can of body paint, fingertip dab. Drag slow lines down their chest, stomach. Each stroke marking territory, arousal building.</p>
+
+  <p>You whisper rules: “No moving unless I allow. No touching unless I invite.”</p>
+
+  <p>They nod, equal parts dread and heat.</p>
+
+  <p>You pick up rope, soft cane. Methodical ties, wrists, ankles, thighs. Precise configuration: beautiful restraint. Their body arches, captive and surrendered.</p>
+
+  <p>You step away. Admire. The perfect prose of control.</p>
+
+  <p>“Look at me.” They obey, eyes glistening.</p>
+
+  <p>“Beg me to continue.” You bend, crop trailing light across their collarbone.</p>
+
+  <p>“Please… continue.” They do.</p>
+
+  <p>“Good. Mistakes cost more.” You flash the crop. They shiver, expected reaction. They like consequences.</p>
+
+  <p>You proceed with deeper intensity: flogger strokes, paddled swats, skin blushing under your orchestration. Each strike timed with their breaths, mind–body crescendo.</p>
+
+  <p>At apex, you pause. You pick up the blindfold. Their eyes close, vulnerability peaks.</p>
+
+  <p>You circle. Kiss their neck. Lips, hands, exploring. You claim them publicly, privately. They gasp.</p>
+
+  <p>With blindfold on, you guide them to the spanking bench. One leg draped. You press crop lightly to inner thigh. Easing faster, fiercer. They moan, pleasure entwined with obedience.</p>
+
+  <p>You stroke their back, soothe a sting, showing mercy is under your control.</p>
+
+  <p>You take them to the edge. Wait. Let them ache for finish.</p>
+
+  <p>You whisper: “Beg me.” They gasp. “Please… yes. Let me finish.”</p>
+
+  <p>You choose: deny. Or grant. You grin.</p>
+
+  <p>You release them backwards, crop behind them. “Tonight, you earn release.”</p>
+
+  <p>They vocalize slow moans, breathy prayers. They give voice to your power.</p>
+
+  <p>When you finally cup them, manual dexterity ignites. You build them up, slow, exacting. Pleasure radiates. You let them come, full and loud, then dip away, carry them through climax’s wave.</p>
+
+  <p>They slump, trembling. You catch them, steady. Removing blindfold. Pressing a gentle kiss. They look at you, devotion, glow, submission met with certainty.</p>
+
+  <p>You undo restraints. Their limbs free, but they don’t flee. Instead, they kneel before you.</p>
+
+  <p>You step close. Towering above them, looking down at them still trembling. “This isn’t role play, this is total power exchange. You belong to me.”</p>
+
+  <p>They whisper thanks. You nod.</p>
+
+  <p>Candles burn low. Silence hangs again, charged, satisfied.</p>
+
+  <p>You escort them to the door. They stand, upright, chest soft, eyes bright. They know they’ve crossed a threshold of trust, and returned safely.</p>
+
+  <p>You clasp their hand, guide them back into the world, still under your subtle command.</p>
