--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Dungeon Master – Erotic Blueprint</title>
+  <title>Dungeon Master – Erotic Blueprint</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -84,17 +84,17 @@
 </head>
 <body>
   <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
-  <h1>The Dungeon Master</h1>
+  <h1>Dungeon Master</h1>
   <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
   <p class="quote">“Everything is about sex except sex. Sex is about power.” – Anonymous</p>
 
   <div class="image-container">
     <div class="image-half">
-      <img src="/images/the_dungeon_master_female.jpg" alt="Female Dungeon Master">
+      <img src="/images/dungeon_master_female.jpg" alt="Female Dungeon Master">
     </div>
     <div class="divider"></div>
     <div class="image-half">
-      <img src="/images/the_dungeon_master_male.jpg" alt="Male Dungeon Master">
+      <img src="/images/dungeon_master_male.jpg" alt="Male Dungeon Master">
     </div>
   </div>
     <h2>➺ Power Dynamic Arc</h2>
