--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -90,7 +90,7 @@
 
   <div class="image-container">
     <div class="image-half">
-      <img src="/images/dungeon_master_female.jpg" alt="Female Dungeon Master">
+      <img src="/images/dungeon_master_female.JPG" alt="Female Dungeon Master">
     </div>
     <div class="divider"></div>
     <div class="image-half">
@@ -103,13 +103,13 @@
 
   <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
   <ul>
-    <li>• Dungeon Master remains dominant → 📈 Sustained high performance</li>
+    <li>Dungeon Master remains dominant → 📈 Sustained high performance</li>
     <li class="sub">Relationship deepens through structure, ritual, and obedience</li>
-    <li>• Submissive tries to take control → 📉 Sudden drop</li>
+    <li>Submissive tries to take control → 📉 Sudden drop</li>
     <li class="sub">Dominant feels betrayed, dynamic becomes emotionally unsafe</li>
-    <li>• Dungeon Master softens into vulnerability → ⚠️ Stagnation</li>
+    <li>Dungeon Master softens into vulnerability → ⚠️ Stagnation</li>
     <li class="sub">Partner may feel confused or uneasy, unsure how to respond</li>
-    <li>• Dungeon Master switches roles → 🚨 Crash</li>
+    <li>Dungeon Master switches roles → 🚨 Crash</li>
     <li class="sub">Identity crisis ensues. Erotic trust dissolves. Relationship fails</li>
   </ul>
 
@@ -120,59 +120,59 @@
   <p>The Dungeon Master eroticizes power, precision, and the psychological intimacy that control creates. For them, dominance isn’t aggression, it’s discipline, ritual, and reverence.</p>
 
   <ul>
-    <li>• <strong>Hereditary Theory:</strong> Their dominance may be inherited from generations of survival-oriented behaviors, where control meant security and leadership was essential to survival.</li>
-    <li>• <strong>Imprintation Theory:</strong> Early arousal may have been linked to being watched, obeyed, or obeying someone with total authority, instilling a desire to replicate those roles in adulthood.</li>
-    <li>• <strong>Blank Slate Theory:</strong> They were often told to lead, excel, or never show weakness. That conditioning evolved into sexual arousal at the feeling of invincibility and power.</li>
-    <li>• <strong>Exposure Therapy Theory:</strong> Some Dungeon Masters reclaim agency by turning past powerlessness into scenes where they decide every outcome.</li>
-    <li>• <strong>Self-Esteem Theory:</strong> They view dominance not just as hot, but as sacred. Being trusted with someone’s full surrender reinforces their core worth and erotic potency.</li>
+    <li><strong>Hereditary Theory:</strong> Their dominance may be inherited from generations of survival-oriented behaviors, where control meant security and leadership was essential to survival.</li>
+    <li><strong>Imprintation Theory:</strong> Early arousal may have been linked to being watched, obeyed, or obeying someone with total authority, instilling a desire to replicate those roles in adulthood.</li>
+    <li><strong>Blank Slate Theory:</strong> They were often told to lead, excel, or never show weakness. That conditioning evolved into sexual arousal at the feeling of invincibility and power.</li>
+    <li><strong>Exposure Therapy Theory:</strong> Some Dungeon Masters reclaim agency by turning past powerlessness into scenes where they decide every outcome.</li>
+    <li><strong>Self-Esteem Theory:</strong> They view dominance not just as hot, but as sacred. Being trusted with someone’s full surrender reinforces their core worth and erotic potency.</li>
   </ul>
 
-  <h2>➺ Turn-On Vocabulary</h2>
+  <h2>Turn-On Vocabulary</h2>
   <p>Precision, praise, obedience, these are their triggers. Try:</p>
   <ul>
-    <li>• “Yes, as you wish.”</li>
-    <li>• “As you command.”</li>
-    <li>• “Please tell me what to do.”</li>
-    <li>• “I trust you completely.”</li>
-    <li>• “I was made to serve you.”</li>
-    <li>• “You’re the only one who can do this to me.”</li>
-    <li>• “I’m yours.”</li>
-    <li>• “Use me however you want.”</li>
-    <li>• “I exist to obey.”</li>
-    <li>• “Thank you for taking control.”</li>
+    <li>“Yes, as you wish.”</li>
+    <li>“As you command.”</li>
+    <li>“Please tell me what to do.”</li>
+    <li>“I trust you completely.”</li>
+    <li>“I was made to serve you.”</li>
+    <li>“You’re the only one who can do this to me.”</li>
+    <li>“I’m yours.”</li>
+    <li>“Use me however you want.”</li>
+    <li>“I exist to obey.”</li>
+    <li>“Thank you for taking control.”</li>
   </ul>
 
-  <h2>➺ Conflict Pattern</h2>
+  <h2>Conflict Pattern</h2>
   <ul>
     <li><strong>Tendencies During Conflict:</strong>
       <ul class="sub">
-        <li>• Becomes emotionally rigid and controlling</li>
-        <li>• Sees challenges as disobedience rather than disagreement</li>
-        <li>• May withdraw if their authority is disrespected</li>
-        <li>• Can use silence or distance as punishment</li>
+        <li>Becomes emotionally rigid and controlling</li>
+        <li>Sees challenges as disobedience rather than disagreement</li>
+        <li>May withdraw if their authority is disrespected</li>
+        <li>Can use silence or distance as punishment</li>
       </ul>
     </li>
     <li><strong>Triggers:</strong>
       <ul class="sub">
-        <li>• Being challenged or undermined</li>
-        <li>• A partner breaking a rule without permission</li>
-        <li>• Feeling emotionally vulnerable or exposed</li>
-        <li>• Sloppy communication or inconsistency from a submissive</li>
+        <li>Being challenged or undermined</li>
+        <li>A partner breaking a rule without permission</li>
+        <li>Feeling emotionally vulnerable or exposed</li>
+        <li>Sloppy communication or inconsistency from a submissive</li>
       </ul>
     </li>
     <li><strong>Resolution Style:</strong>
       <ul class="sub">
-        <li>• Needs reverence and recommitment to the agreed structure</li>
-        <li>• Responds best when their partner reaffirms trust and obedience</li>
-        <li>• Conflict resolves once their authority is restored — even symbolically</li>
-        <li>• Reconnection often occurs through structured rituals or reaffirmed roles</li>
+        <li>Needs reverence and recommitment to the agreed structure</li>
+        <li>Responds best when their partner reaffirms trust and obedience</li>
+        <li>Conflict resolves once their authority is restored — even symbolically</li>
+        <li>Reconnection often occurs through structured rituals or reaffirmed roles</li>
       </ul>
     </li>
     <li><strong>Growth Edge:</strong>
       <ul class="sub">
-        <li>• Allowing emotional connection without feeling like they’ve lost power</li>
-        <li>• Learning to hold space for their submissive’s evolving needs</li>
-        <li>• Recognizing that dominance is most sustainable when it’s collaborative, not just enforced</li>
+        <li>Allowing emotional connection without feeling like they’ve lost power</li>
+        <li>Learning to hold space for their submissive’s evolving needs</li>
+        <li>Recognizing that dominance is most sustainable when it’s collaborative, not just enforced</li>
       </ul>
     </li>
   </ul>
