--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -97,7 +97,7 @@
       <img src="/images/dungeon_master_male.jpg" alt="Male Dungeon Master">
     </div>
   </div>
-    <h2>➺ Power Dynamic Arc</h2>
+    <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
   Dungeon Masters are fixed dominants. They don’t perform power, they are power. They require obedience not as a preference but as a precondition. Their ideal relationships are built on total control paired with willing submission. If that control is questioned, the dynamic collapses.</p>
 
@@ -116,7 +116,7 @@
   <p><strong>Ideal Dynamic:</strong><br>
   The Dungeon Master thrives with a submissive who finds freedom in structure. The healthiest version of this relationship involves explicit agreements, devotional rituals, and deep psychological surrender, where the submissive doesn’t just obey but wants to obey.</p>
 
-  <h2>➺ Origins of Desire</h2>
+  <h2>Origins of Desire</h2>
   <p>The Dungeon Master eroticizes power, precision, and the psychological intimacy that control creates. For them, dominance isn’t aggression, it’s discipline, ritual, and reverence.</p>
 
   <ul>
