--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -177,13 +177,13 @@
     </li>
   </ul>
 
-  <h2>➺ Erotic Edge & Drop</h2>
+  <h2>Erotic Edge & Drop</h2>
   <p><strong>Erotic Edge:</strong><br>
   What others crave is how complete it feels to submit to them. The Dungeon Master doesn’t guess, they know. Their voice, their rituals, their gaze become commandments. They offer their submissive a spiritual release through obedience. What they do best is make surrender feel holy.</p>
 
   <p><strong>Erotic Drop (Dealbreaker):</strong><br>
   Disobedience without purpose. Bratty behavior that breaks protocol. Emotionally passive partners who say “do whatever you want” without true intention. The Dungeon Master needs submission that is chosen and honored, not handed over carelessly or used as manipulation.</p>
-    <h2>➺ Erotic Short Story</h2>
+    <h2>Erotic Short Story</h2>
   <p>The door swings open onto a room bathed in low amber light. Plush leather, polished steel, heavy chains anchored to beams overhead. Subtle thrum from hidden speakers. Scented candles flicker, shadows dancing across rich red velvet drapes. You step in behind them, hearing the soft click of the lock.</p>
 
   <p>Control hangs in the air. You breathe it in.</p>
