--- a/premium/erotic-blueprint_punish_me.html
+++ b/premium/erotic-blueprint_punish_me.html
@@ -99,17 +99,17 @@
   </div>
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
-  Punish Me is a submissive-leaning role switch who initiates conflict as foreplay. They test limits, provoke reactions, and thrive on being overpowered by someone strong enough to correct them. Their dynamic is not passive but deliberately instigating. They only submit when someone proves they can handle them.</p>
+  The Punish Me is a submissive-leaning role switch who initiates conflict as foreplay. They test limits, provoke reactions, and thrive on being overpowered by someone strong enough to correct them. Their dynamic is not passive but deliberately instigating. They only submit when someone proves they can handle them.</p>
 
   <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
   <ul>
-    <li>Punish Me stays bratty submissive → 📈 Tension rises, followed by euphoric surrender</li>
+    <li>The Punish Me stays bratty submissive → 📈 Tension rises, followed by euphoric surrender</li>
     <li class="sub">Craves power correction. Dynamic stays hot if dominant responds with control</li>
     <li>Dominant loses control or gives in → 📉 Polarity drop</li>
     <li class="sub">Partner is no longer seen as worthy of submission</li>
-    <li>Punish Me becomes dominant → 🚫 Polarity inversion</li>
+    <li>The Punish Me becomes dominant → 🚫 Polarity inversion</li>
     <li class="sub">Feels inauthentic. Erotic charge vanishes</li>
-    <li>Punish Me switches temporarily into service mode → 📊 Functional balance</li>
+    <li>The Punish Me switches temporarily into service mode → 📊 Functional balance</li>
     <li class="sub">Only sustainable if they feel seen and reined in again later</li>
   </ul>
 
