--- a/profiles/bedroom_adventurer.html
+++ b/profiles/bedroom_adventurer.html
@@ -125,5 +125,33 @@
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
+  <!-- Premium Caption + Button -->
+<div style="text-align: center; margin-top: 40px;">
+  <p style="font-size: 20px; margin-bottom: 20px;">
+    Want to go deeper? Unlock your Premium Erotic Blueprint to reveal what truly turns you on — and who.
+  </p>
+  <a href="https://lelibido.com/premium-profiles.html" class="premium-button">Unlock Your Premium Sexual Profile</a>
+</div>
+
+<style>
+  .premium-button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 14px 28px;
+    font-size: 18px;
+    font-weight: 700;
+    color: white;
+    border: 2px solid white;
+    background: transparent;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+  }
+  .premium-button:hover {
+    background-color: white;
+    color: black;
+  }
+</style>
 </body>
 </html>
