--- a/Result.html
+++ b/Result.html
@@ -224,34 +224,27 @@
       window.location.href = profilePath;
     });
   </script>
-  <!-- Premium Caption + Button -->
-<div style="text-align: center; margin-top: 40px;">
-  <p style="font-size: 20px; margin-bottom: 20px;">
-    Want to go deeper? Unlock your Premium Erotic Blueprint to reveal what truly turns you on — and who.
-  </p>
-  <a href="https://lelibido.com/premium-profiles.html" class="premium-button">Unlock Your Premium Sexual Profile</a>
+  <div style="margin-top: 40px;">
+  <div style="font-style: italic; font-size: 1rem; margin-bottom: 12px; color: white; opacity: 0.9;">
+    Want to go deeper? This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
+  </div>
+  <a href="https://lelibido.com/premium-profiles.html">
+    <button style="
+      margin-top: 10px;
+      padding: 12px 24px;
+      font-weight: bold;
+      font-size: 1rem;
+      border: 2px solid white;
+      background-color: transparent;
+      color: white;
+      font-style: italic;
+      border-radius: 8px;
+      cursor: pointer;
+    ">
+      Unlock Your Premium Sexual Profile
+    </button>
+  </a>
 </div>
-
-<!-- CSS for Premium Button -->
-<style>
-  .premium-button {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 14px 28px;
-    font-size: 18px;
-    font-weight: 700;
-    color: white;
-    border: 2px solid white;
-    background: transparent;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-  }
-  .premium-button:hover {
-    background-color: white;
-    color: black;
-  }
 </style>
 </body>
 </html>
