--- a/Result.html
+++ b/Result.html
@@ -224,21 +224,21 @@
       window.location.href = profilePath;
     });
   </script>
-  <div style="margin-top: 40px;">
-  <div style="font-style: italic; font-size: 1rem; margin-bottom: 12px; color: white; opacity: 0.9;">
+ <div style="margin-top: 50px;">
+  <div style="font-style: italic; font-size: 1.25rem; margin-bottom: 16px; color: white; opacity: 0.95; max-width: 700px; margin-left: auto; margin-right: auto;">
     Want to go deeper? This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
   </div>
   <a href="https://lelibido.com/premium-profiles.html">
     <button style="
       margin-top: 10px;
-      padding: 12px 24px;
+      padding: 16px 32px;
       font-weight: bold;
-      font-size: 1rem;
+      font-size: 1.15rem;
       border: 2px solid white;
       background-color: transparent;
       color: white;
       font-style: italic;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
     ">
       Unlock Your Premium Sexual Profile
