--- a/Result.html
+++ b/Result.html
@@ -225,8 +225,8 @@
     });
   </script>
  <div style="margin-top: 50px;">
-  <div style="font-style: italic; font-size: 1.25rem; margin-bottom: 16px; color: white; opacity: 0.95; max-width: 700px; margin-left: auto; margin-right: auto;">
-    Want to go deeper? This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
+  <div style="font-size: 1.25rem; margin-bottom: 16px; color: white; opacity: 0.95; max-width: 700px; margin-left: auto; margin-right: auto;">
+    <span style="font-style: italic;">Want to go deeper?</span> This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
   </div>
   <a href="https://lelibido.com/premium-profiles.html">
     <button style="
