--- a/profiles/bedroom_adventurer.html
+++ b/profiles/bedroom_adventurer.html
@@ -125,21 +125,21 @@
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
-  <div style="margin-top: 40px;">
-  <div style="font-style: italic; font-size: 1rem; margin-bottom: 12px; color: white; opacity: 0.9;">
-    Want to go deeper? This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
+  <div style="margin-top: 50px;">
+  <div style="font-size: 1.25rem; margin-bottom: 16px; color: white; opacity: 0.95; max-width: 700px; margin-left: auto; margin-right: auto;">
+    <span style="font-style: italic;">Want to go deeper?</span> This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
   </div>
   <a href="https://lelibido.com/premium-profiles.html">
     <button style="
       margin-top: 10px;
-      padding: 12px 24px;
+      padding: 16px 32px;
       font-weight: bold;
-      font-size: 1rem;
+      font-size: 1.15rem;
       border: 2px solid white;
       background-color: transparent;
       color: white;
       font-style: italic;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
     ">
       Unlock Your Premium Sexual Profile
