--- a/profiles/devoted_darling.html
+++ b/profiles/devoted_darling.html
@@ -120,5 +120,26 @@
   ">
     View All Sexual Profiles
   </a>
+  <div style="margin-top: 50px;">
+  <div style="font-size: 1.25rem; margin-bottom: 16px; color: white; opacity: 0.95; max-width: 700px; margin-left: auto; margin-right: auto;">
+    <span style="font-style: italic;">Want to go deeper?</span> This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
+  </div>
+  <a href="https://lelibido.com/premium-profiles.html">
+    <button style="
+      margin-top: 10px;
+      padding: 16px 32px;
+      font-weight: bold;
+      font-size: 1.15rem;
+      border: 2px solid white;
+      background-color: transparent;
+      color: white;
+      font-style: italic;
+      border-radius: 10px;
+      cursor: pointer;
+    ">
+      Unlock Your Premium Sexual Profile
+    </button>
+  </a>
+</div>
 </body>
 </html>
