--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -315,5 +315,25 @@
       <a href="index.html" class="find-type-button">Find Your Type</a>
     </div>
   </div>
+  <a href="https://lelibido.com/premium-profiles.html" style="
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 14px 28px;
+  background-color: transparent;
+  border: 2px solid white;
+  color: white;
+  font-style: italic;
+  font-size: 1.1rem;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 10px;
+  z-index: 9999;
+  text-decoration: none;
+  backdrop-filter: blur(4px);
+  transition: background-color 0.3s, color 0.3s;
+">
+  Unlock Your Premium Sexual Profile
+</a>
   </body>
 </html>
