--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -142,6 +142,24 @@
     <h1>Sexual Profiles</h1>
   </div>
   <div class="title-line"></div>
+  <a href="https://lelibido.com/premium-profiles.html" style="
+  display: block;
+  margin: 20px auto 10px;
+  padding: 12px 28px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-style: italic;
+  color: white;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 25px;
+  text-align: center;
+  text-decoration: none;
+  width: fit-content;
+  transition: background-color 0.3s, color 0.3s;
+">
+  Unlock Your Premium Sexual Profile
+</a>
     <div class="section container">
     <!-- Tender Protector -->
     <div class="archetype-card">
