--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -142,24 +142,36 @@
     <h1>Sexual Profiles</h1>
   </div>
   <div class="title-line"></div>
-  <a href="https://lelibido.com/premium-profiles.html" style="
-  display: block;
-  margin: 20px auto 10px;
-  padding: 12px 28px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-style: italic;
-  color: white;
-  background-color: transparent;
-  border: 2px solid white;
-  border-radius: 25px;
-  text-align: center;
-  text-decoration: none;
-  width: fit-content;
-  transition: background-color 0.3s, color 0.3s;
-">
-  Unlock Your Premium Sexual Profile
-</a>
+<style>
+  .top-premium-button {
+    display: inline-block;
+    margin: 15px auto 30px;
+    padding: 14px 30px;
+    border: 2px solid white;
+    color: white;
+    background-color: transparent;
+    font-style: italic;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    text-decoration: none;
+    border-radius: 30px;
+    font-weight: bold;
+    text-align: center;
+    transition: background-color 0.3s, color 0.3s;
+    box-shadow: 0 0 6px rgba(255,255,255,0.3);
+  }
+
+  .top-premium-button:hover {
+    background-color: white;
+    color: black;
+  }
+</style>
+
+<div style="text-align: center;">
+  <a href="https://lelibido.com/premium-profiles.html" class="top-premium-button">
+    Unlock Your Premium Sexual Profile
+  </a>
+</div>
     <div class="section container">
     <!-- Tender Protector -->
     <div class="archetype-card">
