--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -145,8 +145,8 @@
 <style>
   .top-premium-button {
     display: inline-block;
-    margin: 8px auto 8px;
-    padding: 12px 12px;
+    margin: 10px auto;
+    padding: 10px 22px;
     border: 2px solid white;
     color: white;
     background-color: transparent;
@@ -165,9 +165,14 @@
     background-color: white;
     color: black;
   }
+
+  .top-button-wrapper {
+    text-align: center;
+    margin-bottom: 20px;
+  }
 </style>
 
-<div style="text-align: center;">
+<div class="top-button-wrapper">
   <a href="https://lelibido.com/premium-profiles.html" class="top-premium-button">
     Unlock Your Premium Sexual Profile
   </a>
