--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -145,7 +145,7 @@
 <style>
   .top-premium-button {
     display: inline-block;
-    margin: 10px auto;
+    margin: 10px 10px;
     padding: 10px 10px;
     border: 2px solid white;
     color: white;
@@ -168,7 +168,7 @@
 
   .top-button-wrapper {
     text-align: center;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
   }
 </style>
 
