--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -142,41 +142,6 @@
     <h1>Sexual Profiles</h1>
   </div>
   <div class="title-line"></div>
-<style>
-  .top-premium-button {
-    display: inline-block;
-    margin: 5px 5px;
-    padding: 5px 5px;
-    border: 2px solid white;
-    color: white;
-    background-color: transparent;
-    font-style: italic;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1rem;
-    text-decoration: none;
-    border-radius: 30px;
-    font-weight: bold;
-    text-align: center;
-    transition: background-color 0.3s, color 0.3s;
-    box-shadow: 0 0 6px rgba(255,255,255,0.3);
-  }
-
-  .top-premium-button:hover {
-    background-color: white;
-    color: black;
-  }
-
-  .top-button-wrapper {
-    text-align: center;
-    margin-bottom: 4px;
-  }
-</style>
-
-<div class="top-button-wrapper">
-  <a href="https://lelibido.com/premium-profiles.html" class="top-premium-button">
-    Unlock Your Premium Sexual Profile
-  </a>
-</div>
     <div class="section container">
     <!-- Tender Protector -->
     <div class="archetype-card">
@@ -229,7 +194,11 @@
       <h3><a href="profiles/mood_multiplier.html">Mood Multiplier</a></h3>
       <p class="slogan">You match their vibe and raise it.</p>
     </div>
-
+<div style="text-align: center; margin: 10px auto 8px;">
+  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 10px 24px; border: 2px solid white; color: white; background-color: transparent; font-style: italic; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s;">
+    Unlock Your Premium Sexual Profile
+  </a>
+</div>
     <a href="index.html" class="find-type-button">Find Your Type</a>
   </div>
     <!-- GREEN ROOM -->
@@ -287,8 +256,12 @@
         <h3><a href="profiles/charmer_in_charge.html">Charmer in Charge</a></h3>
         <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
-
-      <a href="index.html" class="find-type-button">Find Your Type</a>
+<div style="text-align: center; margin: 10px auto 8px;">
+  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 10px 24px; border: 2px solid white; color: white; background-color: transparent; font-style: italic; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s;">
+    Unlock Your Premium Sexual Profile
+  </a>
+</div>
+    <a href="index.html" class="find-type-button">Find Your Type</a>      <a href="index.html" class="find-type-button">Find Your Type</a>
     </div>
   </div>
     <!-- RED ROOM -->
