--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -261,7 +261,7 @@
     Unlock Your Premium Sexual Profile
   </a>
 </div>
-    <a href="index.html" class="find-type-button">Find Your Type</a>      <a href="index.html" class="find-type-button">Find Your Type</a>
+    <a href="index.html" class="find-type-button">Find Your Type</a>   
     </div>
   </div>
     <!-- RED ROOM -->
