--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -199,7 +199,12 @@
     Unlock Your Premium Sexual Profile
   </a>
 </div>
-    <a href="index.html" class="find-type-button">Find Your Type</a>
+  <div style="text-align: center; margin: 10px auto 8px;">
+  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 12px 28px; border: 2px solid white; color: white; background-color: transparent; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s; box-shadow: 0 0 6px rgba(255,255,255,0.35);">
+    Unlock Your Premium Sexual Profile
+  </a>
+</div>
+<a href="index.html" class="find-type-button">Find Your Type</a>
   </div>
     <!-- GREEN ROOM -->
   <div class="green-room">
@@ -261,7 +266,12 @@
     Unlock Your Premium Sexual Profile
   </a>
 </div>
-    <a href="index.html" class="find-type-button">Find Your Type</a>   
+    <div style="text-align: center; margin: 10px auto 8px;">
+  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 12px 28px; border: 2px solid white; color: white; background-color: transparent; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s; box-shadow: 0 0 6px rgba(255,255,255,0.35);">
+    Unlock Your Premium Sexual Profile
+  </a>
+</div>
+<a href="index.html" class="find-type-button">Find Your Type</a>  
     </div>
   </div>
     <!-- RED ROOM -->
