--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -194,16 +194,25 @@
       <h3><a href="profiles/mood_multiplier.html">Mood Multiplier</a></h3>
       <p class="slogan">You match their vibe and raise it.</p>
     </div>
-<div style="text-align: center; margin: 10px auto 8px;">
-  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 10px 24px; border: 2px solid white; color: white; background-color: transparent; font-style: italic; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s;">
-    Unlock Your Premium Sexual Profile
-  </a>
-</div>
-  <div style="text-align: center; margin: 10px auto 8px;">
-  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 12px 28px; border: 2px solid white; color: white; background-color: transparent; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s; box-shadow: 0 0 6px rgba(255,255,255,0.35);">
-    Unlock Your Premium Sexual Profile
-  </a>
-</div>
+<a href="https://lelibido.com/premium-profiles.html" style="
+  display: block;
+  margin: 0 auto 10px;
+  padding: 12px 28px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-style: italic;
+  color: white;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 25px;
+  text-align: center;
+  text-decoration: none;
+  width: fit-content;
+  transition: background-color 0.3s, color 0.3s;
+  box-shadow: 0 0 8px rgba(255,255,255,0.35);
+">
+  Unlock Your Premium Sexual Profile
+</a>
 <a href="index.html" class="find-type-button">Find Your Type</a>
   </div>
     <!-- GREEN ROOM -->
@@ -261,16 +270,25 @@
         <h3><a href="profiles/charmer_in_charge.html">Charmer in Charge</a></h3>
         <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
-<div style="text-align: center; margin: 10px auto 8px;">
-  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 10px 24px; border: 2px solid white; color: white; background-color: transparent; font-style: italic; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s;">
-    Unlock Your Premium Sexual Profile
-  </a>
-</div>
-    <div style="text-align: center; margin: 10px auto 8px;">
-  <a href="https://lelibido.com/premium-profiles.html" style="display: inline-block; padding: 12px 28px; border: 2px solid white; color: white; background-color: transparent; font-family: 'Poppins', sans-serif; font-size: 1rem; text-decoration: none; border-radius: 25px; font-weight: bold; text-align: center; transition: background-color 0.3s, color 0.3s; box-shadow: 0 0 6px rgba(255,255,255,0.35);">
-    Unlock Your Premium Sexual Profile
-  </a>
-</div>
+<a href="https://lelibido.com/premium-profiles.html" style="
+  display: block;
+  margin: 0 auto 10px;
+  padding: 12px 28px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-style: italic;
+  color: white;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 25px;
+  text-align: center;
+  text-decoration: none;
+  width: fit-content;
+  transition: background-color 0.3s, color 0.3s;
+  box-shadow: 0 0 8px rgba(255,255,255,0.35);
+">
+  Unlock Your Premium Sexual Profile
+</a>
 <a href="index.html" class="find-type-button">Find Your Type</a>  
     </div>
   </div>
