--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -194,25 +194,11 @@
       <h3><a href="profiles/mood_multiplier.html">Mood Multiplier</a></h3>
       <p class="slogan">You match their vibe and raise it.</p>
     </div>
-<a href="https://lelibido.com/premium-profiles.html" style="
-  display: block;
-  margin: 0 auto 10px;
-  padding: 12px 28px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-style: italic;
-  color: white;
-  background-color: transparent;
-  border: 2px solid white;
-  border-radius: 25px;
-  text-align: center;
-  text-decoration: none;
-  width: fit-content;
-  transition: background-color 0.3s, color 0.3s;
-  box-shadow: 0 0 8px rgba(255,255,255,0.35);
-">
-  Unlock Your Premium Sexual Profile
-</a>
+<div class="top-button-wrapper">
+  <a href="https://lelibido.com/premium-profiles.html" class="top-premium-button">
+    Unlock Your Premium Sexual Profile
+  </a>
+</div>
 <a href="index.html" class="find-type-button">Find Your Type</a>
   </div>
     <!-- GREEN ROOM -->
@@ -270,25 +256,11 @@
         <h3><a href="profiles/charmer_in_charge.html">Charmer in Charge</a></h3>
         <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
-<a href="https://lelibido.com/premium-profiles.html" style="
-  display: block;
-  margin: 0 auto 10px;
-  padding: 12px 28px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-style: italic;
-  color: white;
-  background-color: transparent;
-  border: 2px solid white;
-  border-radius: 25px;
-  text-align: center;
-  text-decoration: none;
-  width: fit-content;
-  transition: background-color 0.3s, color 0.3s;
-  box-shadow: 0 0 8px rgba(255,255,255,0.35);
-">
-  Unlock Your Premium Sexual Profile
-</a>
+<div class="top-button-wrapper">
+  <a href="https://lelibido.com/premium-profiles.html" class="top-premium-button">
+    Unlock Your Premium Sexual Profile
+  </a>
+</div>
 <a href="index.html" class="find-type-button">Find Your Type</a>  
     </div>
   </div>
