--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -83,6 +83,8 @@
       border-radius: 8px;
       cursor: pointer;
       margin-bottom: 25px;
+      text-decoration: none;
+      display: inline-block;
       transition: background-color 0.3s;
     }
 
@@ -126,7 +128,7 @@
       <div class="card">
         <h2>Your Erotic Blueprint</h2>
         <p class="price">$9</p>
-        <button class="button">Continue</button>
+        <a href="https://buy.stripe.com/test_4gM7sNgENaYp9o0a3KfUQ00" class="button">Continue</a>
         <ul>
           <li>Full deep-dive profile of your erotic archetype</li>
           <li>Erotic short story tailored to your sexual profile</li>
@@ -138,7 +140,7 @@
       <div class="card">
         <h2>Compatibility Package</h2>
         <p class="price">$27</p>
-        <button class="button">Continue</button>
+        <a href="https://buy.stripe.com/test_8x2bJ388heaBeIk5NufUQ01" class="button">Continue</a>
         <ul>
           <li>Everything from the Erotic Blueprint package</li>
           <li>Erotic blueprints of your Top 3 compatibility matches including:</li>
@@ -150,7 +152,7 @@
       <div class="card">
         <h2>The Forbidden Library</h2>
         <p class="price">$39</p>
-        <button class="button">Continue</button>
+        <a href="https://buy.stripe.com/test_3cI4gB88hgiJ8jWdfWfUQ02" class="button">Continue</a>
         <ul>
           <li>Access to all 12 erotic blueprints</li>
           <li>Deep-dive of all sexual profiles</li>
