--- a/unlocked-blueprint.html
+++ b/unlocked-blueprint.html
@@ -49,7 +49,8 @@
 
     .card {
       background-color: #1a1a1a;
-      border: 3px solid gold;
+      border: 3px solid;
+      border-image: linear-gradient(to right, #950606, #064D95, #06954E) 1;
       border-radius: 14px;
       width: 260px;
       text-align: center;
@@ -64,9 +65,9 @@
     .card img {
       width: 100%;
       height: 320px;
-      object-fit: cover;
+      object-fit: contain;
       display: block;
-      border-bottom: 3px solid gold;
+      background-color: #1a1a1a;
     }
 
     .card h3 {
